tests/custom/dominance/01-missingAscDesc/stderr.expected
Error:
    dominance.essence:13:26:
unexpected |
    incomparability_function |s|
                             ^
